--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -63,3 +63,20 @@ ul {
   box-shadow: 0px 10px 39px 5px rgba(27, 183, 255, 0.22);
   transition: 0.4s;
 }
+@media only screen and (max-width: 980px) {
+  .navBar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center ;
+  }
+  
+  ulNavbar {
+    display: flex;
+ flex-direction: column;
+    align-items: center;
+  }
+  .colorNav2{
+   width: 100%;
+ white-space: nowrap;
+  }
+}
