--- a/src/components/About.css
+++ b/src/components/About.css
@@ -62,5 +62,11 @@ transition: 0.4s;
 -moz-box-shadow: 0px 10px 39px 5px rgb(27, 31, 36);
 box-shadow: 0px 10px 39px 5px rgb(27, 31, 36); 
 }
+  .contentAboutMain:hover{
+  -webkit-box-shadow:0px 10px 39px 5px rgb(27, 31, 36);
+-moz-box-shadow: 0px 10px 39px 5px rgb(27, 31, 36);
+box-shadow: 0px 10px 39px 5px rgb(27, 31, 36); 
+transition: 0.4s;
+}
 }
 
